# CNN-and-ML-practice

./: main.py  pyproject.toml
src/ml_practice_and_neural_net/: main.py
src/ml_practice_and_neural_net/ml_practice/: tester.py
src/ml_practice_and_neural_net/ml_practice/simple_data_visualization/: main.py  pandas_basics.ipynb  titanic_visualization.ipynb
